{
    "name": "HinputActions",
    "maps": [
        {
            "name": "standard",
            "id": "b7a017da-c41e-4b01-b7c1-d9d866c0630b",
            "actions": [
                {
                    "name": "A",
                    "type": "Button",
                    "id": "b97adc4b-f592-41d1-94db-9815cfa4ab32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "ccdea9f6-b3bd-4a0a-af64-ac7c6a1b499d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "72905c4b-4517-4e74-8f76-1f968f863a43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "d2f47845-2419-4a56-be1d-729769d66540",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "LeftBumper",
                    "type": "Button",
                    "id": "6c1a9200-d986-4ead-9ef5-6b0ef6a229fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RightBumper",
                    "type": "Button",
                    "id": "642e29ab-a674-451c-8197-b94ca3434db7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "2091782d-57a5-492c-9da4-fa3ab4c3eea3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "a1224043-8438-48bb-945e-e961e6193a23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "LeftStickClick",
                    "type": "Button",
                    "id": "76e0ff03-1bd3-46bd-a749-c03387235e52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RightStickClick",
                    "type": "Button",
                    "id": "37b81ce1-c8c9-49e3-b5a2-251143d610c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "LeftTrigger",
                    "type": "Value",
                    "id": "4c3464c2-08ba-467b-8be4-78c608ef262c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightTrigger",
                    "type": "Value",
                    "id": "257e4d5e-fbca-4a52-bab6-0e7bdaf75cff",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "9efaf89a-3f1d-4bfd-ad88-f2c185494b60",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "12c3b569-84cd-4e50-8f8a-a6c7e7e64991",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPad",
                    "type": "Value",
                    "id": "687a3bd0-f755-4b16-8627-e6b886c6d5ef",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "064e08d3-b53a-4122-8e22-e7fd1e8ddbb4",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "580d6f09-e05a-44d5-b491-b504d0af7268",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5f8d94d-7a8c-416b-8cd1-cfadeb2090dd",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9a5f990-ed94-4a5c-9bd6-00d05d432c4b",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a974ab7e-758e-4d3e-96c5-95ece0384fab",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7ddb4de-5744-4dc2-a80d-ea8f0c5bc7e7",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc8445cb-f6b5-4bdd-981e-0370d2e3cdb5",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81851d63-ce58-4efb-b78d-af0e6e0b1690",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb8e6d04-9236-40d9-a172-f0ff9e28b12a",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1aede5a8-c4cb-4c72-9e57-71716798ff82",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77252cb8-2406-442b-98ba-583d7413042f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d40249a5-855c-43a1-bc01-1e244abed01b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d6cd35f-fd0f-4d1b-9fda-e2371b7af961",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf21dcb6-ae9f-4b96-ad8d-e6730513fce3",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97f07bd0-251e-450d-b77f-3e69be1c8f31",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}